# memo-helper

./: LICENSE  README.md
python-google/: README.md  pyproject.toml
python-google/src/python_google/: __init__.py  speech.py
