[project]
name = "python-google"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Beecher Baker", email = "beecher@beechersoftware.com" }
]
dependencies = [
    "speechrecognition>=3.12.0",
    "black>=24.10.0",
    "pyaudio>=0.2.14",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_google"]
